--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "homepage": "https://github.com/moul/node-onlinelabs",
   "dependencies": {
-    "axios": "^0.5.0",
+    "debug": "^2.1.1",
+    "httpinvoke": "^1.3.3",
     "rc": "^0.5.5"
   },
   "devDependencies": {
