--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "homepage": "https://github.com/moul/node-onlinelabs",
   "dependencies": {
+    "chai": "^2.1.1",
     "debug": "^2.1.1",
     "httpinvoke": "^1.3.3",
+    "lodash": "^3.0.0",
     "rc": "^0.5.5"
   },
   "devDependencies": {
