--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "chai": "^2.1.2",
     "debug": "^2.1.3",
-    "httpinvoke": "^1.4.0",
+    "request-promise": "^0.4.1",
     "lodash": "^3.5.0",
     "rc": "^1.0.0"
   },
