--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   },
   "homepage": "https://github.com/moul/node-scaleway",
   "dependencies": {
+    "bluebird": "^2.9.34",
     "debug": "^2.1.3",
-    "request-promise": "^0.4.1",
     "lodash": "^3.5.0",
-    "rc": "^1.0.0"
+    "nodeify": "^1.0.0",
+    "rc": "^1.0.0",
+    "superagent": "^1.3.0",
+    "superagent-bluebird-promise": "^2.1.0"
   },
   "devDependencies": {
     "browserify": "^9.0.3",
